@@ -337,6 +337,8 @@ Build
 Tests
 -----
 
+- Strengthen test_unicode with explicit type checking for assertEqual tests.
+
 - Issue #8857: Provide a test case for socket.getaddrinfo.
 
 - Issue #7564: Skip test_ioctl if another process is attached to /dev/tty.
